<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/loading_trivia"
        app:layout_constraintEnd_toEndOf="@+id/progressbar"
        app:layout_constraintStart_toStartOf="@+id/progressbar"
        app:layout_constraintTop_toBottomOf="@+id/progressbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="104dp"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal"
        android:text="@string/welcome_to_trivia_app"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textColor="#3A3A3A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_btn"
        android:padding="8dp"
        android:text="@string/start_trivia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/trivia_logo"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trivia_logo" />

    <TextView
        android:id="@+id/is_ready_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/trivia_ready"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/logo_iv"
        app:layout_constraintStart_toStartOf="@+id/logo_iv"
        app:layout_constraintTop_toBottomOf="@+id/logo_iv" />

</androidx.constraintlayout.widget.ConstraintLayout>